# AsymmetricErrors

./: AUTHORS  INSTALL  Makefile.am  NEWS  README.md  ase.pc.in  configure.ac
ase/: AbsDistributionModel1D.cc  AbsDistributionModel1D.hh  AbsLocationScaleFamily.cc  AbsLocationScaleFamily.hh  AbsLogLikelihoodCurve.cc  AbsLogLikelihoodCurve.hh  AbsRNG.hh  AbsShiftableLogli.cc  AbsShiftableLogli.hh  AsymmetricEstimate.cc  AsymmetricEstimate.hh  CPPRandomGen.hh  CRandomGen.hh  CubicHermiteInterpolatorEG.cc  CubicHermiteInterpolatorEG.hh  DerivativeFunctors.hh  DiscretizedConvolution.cc  DiscretizedConvolution.hh  DistributionFunctors1D.hh  DistributionModel1DCopy.hh  DistributionModels1D.cc  DistributionModels1D.hh  DoubleCubicInner.cc  DoubleCubicInner.hh  DoubleCubicLogspace.cc  DoubleCubicLogspace.hh  DoubleFunctor1.hh  EdgeworthExpansion3.cc  EquidistantGrid.cc  EquidistantGrid.hh  FunctorTimesShiftedX.hh  GaussHermiteQuadrature.cc  GaussHermiteQuadrature.hh  GaussLegendreQuadrature.cc  GaussLegendreQuadrature.hh  Gaussian.cc  Gaussian.hh  GaussianConvolution.hh  GeneralisedPoissonHelper.cc  GeneralisedPoissonHelper.hh  (+66 more)
tests/: Makefile  cpp11Random.cc  test_Convolution.cc  test_CubicHermiteInterpolatorEG.cc  test_DistributionModels1D.cc  test_HermiteProbOrthoPoly.cc  test_Interval.cc  test_LogLikelihoodCurves.cc  test_ParabolicRailwayCurve.cc  test_Poly1D.cc  test_TransitionCubic.cc  test_ZeroDerivsCubic.cc  test_findMinimumGoldenSection.cc  test_kullbackLeiblerDivergence.cc  test_main.cc  test_mathUtils.cc  test_statUtils.cc  test_utils.cc  test_utils.hh
